Cambio en el welcome index para que se vea mejor el card

--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,4 +1,7 @@
-<div class="row">
+  <br />
+  <br />
+  <br />
+  <br />
   <center>
 	<div class="card">
 	  <div class="card-header">
@@ -6,6 +9,7 @@
 	  </div>
 	  <div class="card-body">
 	    <b><p class="card-text">MANEJADOR DE PROYECTOS</p></b>
+	    <br />
 	    <div class="row">
 	     <div class="col-sm-6">
 	     	<%= link_to "INICIAR SESIÓN", new_user_session_path, class: "btn btn-primary float-right" %><br />
@@ -16,4 +20,4 @@
 	    </div>
 	  </div>
 	</div>
-</div>
+  </center>
